# sprout

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Dockerfile  README.md  SystemLog.proto  pyproject.toml  utils.py
scripts/: compare_event_records.py  count_event_codes.py  dump_stitch_config.py  dump_stitch_metrics.py  plot_compare_dash.py  run_compare.sh  run_demo_batch.sh  run_demo_pipeline.py  tailor_shim.py
sprout/: __init__.py  cli.py  config.py  event_code_apps.json  exceptions.py  graph.py  graph_types.py  lambda_handler.py  llm_backends.py  logging_config.py  state.py
sprout/kg/: __init__.py  structured_summary.py  utils.py
sprout/nodes/: __init__.py  analyze.py  augment.py  parse.py  prioritize.py  synthesize.py
tests/: conftest.py
tests/unit/: test_anomaly.py  test_config.py  test_lambda_handler.py  test_scoring.py  test_structured_summary.py
