[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprout"
version = "0.1.0"
description = "LangGraph-based agronomic anomaly detection and reporting pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
local = [
    "torch",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "accelerate>=0.33.0",
]
local-train = [
    "sprout[local]",
    "datasets>=2.20.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0; platform_system != 'Darwin'",
]
dash = [
    "plotly>=5.22.0",
    "dash>=2.17.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
sprout = "sprout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sprout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
